--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.3",
-    "psr/container": "^1.0"
+    "psr/container": "1.1.1"
   },
   "autoload": {
     "psr-4": {
